Wrapping up part c

--- a/a1/report/A1report.tex
+++ b/a1/report/A1report.tex
@@ -233,6 +233,17 @@ Andrew Wallace - 101210291\\
 
       Please see A1codes.py for full implementation. 
     \end{enumerate}
+
+    \item (2\%) Synthetic Regression Problem  \\
+    In this part, you will evaluate your implemented algorithms on a synthetic dataset.
+    \begin{enumerate}[(c.1)]
+      \item (1\%) Implement a Python function 
+      \begin{verbatim}
+        train loss, test loss = synRegExperiments() 
+      \end{verbatim} that returns a 2 x 2 matrix train loss of average training losses and a 2 x 2 matrix test loss of average test losses (See Table 1 and Table 2 below.) It repeats 100 runs as follows \\
+      Please see \textbf{A1codes.py} for full details.
+      \item (1\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reason behind them.
+    \end{enumerate}
   \end{enumerate}
 
 \end{question}
