--- a/a1/report/A1report.tex
+++ b/a1/report/A1report.tex
@@ -237,12 +237,48 @@ Andrew Wallace - 101210291\\
     \item (2\%) Synthetic Regression Problem  \\
     In this part, you will evaluate your implemented algorithms on a synthetic dataset.
     \begin{enumerate}[(c.1)]
-      \item (1\%) Implement a Python function 
-      \begin{verbatim}
-        train loss, test loss = synRegExperiments() 
-      \end{verbatim} that returns a 2 x 2 matrix train loss of average training losses and a 2 x 2 matrix test loss of average test losses (See Table 1 and Table 2 below.) It repeats 100 runs as follows \\
+      \item (1\%) Implement a Python function \\
+      \texttt{train\_loss, test\_loss = synRegExperiments()} \\that returns a 2 x 2 matrix train loss of average training losses and a 2 x 2 matrix test loss of average test losses (See Table 1 and Table 2 below.) It repeats 100 runs as follows \\
       Please see \textbf{A1codes.py} for full details.
-      \item (1\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reason behind them.
+      \item (1\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reason behind them. \\
+      Note that the matrices below are representative of the following table:
+      \begin{table}[h!]
+        \centering
+        \begin{tabular}{|c|c|c|}
+          \hline
+          Model & Average $L_2$ loss & Average $L_\infty$ loss \\ 
+          \hline
+          $L_2$ model &  &  \\ 
+          $L_\infty$ model &  &  \\ 
+          \hline
+        \end{tabular}
+        \caption{Different training losses for different models}
+        \label{tab:basic_table}
+      \end{table} \\
+      After running \texttt{synRegExperiments} on the regression\_train.csv and regression\_test.csv data sets we get the following results: \\
+      For training data: \\
+      $\begin{bmatrix}
+        2.00305568 & 7.31711154 \\
+        2.36347873 & 6.6215357
+      \end{bmatrix}$ \\[0.15 em]
+      For test data: \\[0.15 em]
+      $\begin{bmatrix}
+        1.66071948 & 5.58874693 \\
+        1.9868478 & 5.02664782
+      \end{bmatrix}$ \\[0.5 em]
+      For a randomly generated training and test data set using seed 101210291, we get the following results: \\[0.5 em]
+      For training data: \\
+      $\begin{bmatrix}
+        0.11160734 & 1.68718399 \\
+        0.27832791 & 0.91119205
+      \end{bmatrix}$ \\[0.15 em]
+      For test data: \\[0.15 em]
+      $\begin{bmatrix}
+        0.05252988 & 1.02181983 \\
+        0.35054548 & 2.26890905
+      \end{bmatrix}$ \\[0.15 em]
+
+      This shows that our $L_2$ loss, overall, has a lower average loss compared to the $L_\infty$ loss. 
     \end{enumerate}
   \end{enumerate}
 
