Fixed venv script

--- a/a1/report/A1report.tex
+++ b/a1/report/A1report.tex
@@ -37,7 +37,7 @@ Christer Henrysson - 101260693\\[1em]
 \end{center}
 \textbf{Getting started} \\
 Note that Python 3.11 was used for this assignment. Please install requirements using virtual environment via: \\
-  \texttt{python3.11 venv .venv} \\
+  \texttt{python3.11 -m venv .venv} \\
   \texttt{source .venv/bin/activate} \\
   \texttt{pip install -r requirements.txt}
 \vspace{0.5em}
